// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/message/demo/custom-style.md correctly 1`] = `
<button
  class="ezd-btn"
  type="button"
>
  <span>
    Customized style
  </span>
</button>
`;

exports[`renders ./components/message/demo/duration.md correctly 1`] = `
<button
  class="ezd-btn"
  type="button"
>
  <span>
    Customized display duration
  </span>
</button>
`;

exports[`renders ./components/message/demo/hooks.md correctly 1`] = `
<button
  class="ezd-btn ant-btn-primary"
  type="button"
>
  <span>
    Display normal message
  </span>
</button>
`;

exports[`renders ./components/message/demo/info.md correctly 1`] = `
<button
  class="ezd-btn ant-btn-primary"
  type="button"
>
  <span>
    Display normal message
  </span>
</button>
`;

exports[`renders ./components/message/demo/loading.md correctly 1`] = `
<button
  class="ezd-btn"
  type="button"
>
  <span>
    Display a loading indicator
  </span>
</button>
`;

exports[`renders ./components/message/demo/other.md correctly 1`] = `
<div
  class="ezd-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Success
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Warning
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/message/demo/thenable.md correctly 1`] = `
<button
  class="ezd-btn"
  type="button"
>
  <span>
    Display sequential messages
  </span>
</button>
`;

exports[`renders ./components/message/demo/update.md correctly 1`] = `
<button
  class="ezd-btn ant-btn-primary"
  type="button"
>
  <span>
    Open the message box
  </span>
</button>
`;
